Bug 1354233 - Add stream to m0RTTStreams after streamId is set. r=mcmanus a=gchang